--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,8 @@ requires = ["uv_build>=0.9.17,<0.10.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = ["pytest>=9.0.2", "pytest-mock>=3.15.1"]
+dev = [
+    "pytest>=9.0.2",
+    "pytest-mock>=3.15.1",
+    "rsconnect-python>=1.28.2",
+]
